--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   docker:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo code 
         uses: actions/checkout@v2
