--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
         run: docker build -t node-docker --target test .
 
       - name: Run docker container with tests
-        run: docker run -it --rm --name node-test node-docker
+        run: docker run --rm --name node-test node-docker
       # - name: Start docker-compose to run containers
       #   run: docker-run -f "docker-compose.yml" up -d --build
       
