added service container with mongodb database integration layer

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,18 +9,39 @@ jobs:
   docker:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repo code 
-        uses: actions/checkout@v2
-      
-      - name: Build docker container
-        run: docker build -t node-docker --target test .
+    services:
+      nodejs_mongo_docker:
+        image: nodejs_mongo_docker
+        build: .
+        environment:
+          NODE_ENV: production
+        ports:
+          - 3000:3000
+        volumes:
+          - .:/code/my-app
+        links:
+          - mongodb
+        # command: "npm run test"
 
-      - name: Run docker container with tests
-        run: docker run --rm --name node-test node-docker
-      # - name: Start docker-compose to run containers
-      #   run: docker-compose up --exit-code-from web
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        volumes:
+          - data:/data/db
+
+    # steps:
+    #   - name: Checkout repo code 
+    #     uses: actions/checkout@v2
       
-      - name: Stop containers
-        if: always()
-        run: docker-compose -f "docker-compose.yml" down
+    #   - name: Build docker container
+    #     run: docker build -t node-docker --target test .
+
+    #   - name: Run docker container with tests
+    #     run: docker run --rm --name node-test node-docker
+    #   # - name: Start docker-compose to run containers
+    #   #   run: docker-compose up --exit-code-from web
+      
+    #   - name: Stop containers
+    #     if: always()
+    #     run: docker-compose -f "docker-compose.yml" down
