--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo code 
+      - name: Checkout repository code
         uses: actions/checkout@v2
       
       - name: Build docker container
