--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,8 +9,16 @@ jobs:
   docker:
     runs-on: ubuntu-latest
 
+  services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        volumes:
+          - data:/data/db
+
     steps:
-      - name: Checkout repository code
+      - name: Checkout repo code 
         uses: actions/checkout@v2
       
       - name: Build docker container
