--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,10 +6,10 @@ on:
       - main
 
 jobs:
-  docker:
+  runner-job:
     runs-on: ubuntu-latest
 
-  services:
+    services:
       mongodb:
         image: mongo:latest
         ports:
