added docker componse to steps: Run tests

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
         run: docker-compose build -t node-docker --target test . 
 
       - name: Run tests
-        run: docker run --rm --name node-test node-docker
+        run: docker-compose run --rm --name node-test node-docker
       
       - name: Stop containers
         if: always()
