--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   runner-job:
     runs-on: ubuntu-latest
+    container: node:10.18-jessie
 
     services:
       mongodb:
@@ -20,7 +21,10 @@ jobs:
     steps:
       - name: Checkout repo code 
         uses: actions/checkout@v2
-      
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Build docker container
         run: docker build -t node-docker --target test .
 
