--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,13 +9,13 @@ jobs:
   runner-job:
     runs-on: ubuntu-latest
 
-    services:
-      mongodb:
-        image: mongo:latest
-        ports:
-          - 27017:27017
-        volumes:
-          - data:/data/db
+    # services:
+    #   mongodb:
+    #     image: mongo:latest
+    #     ports:
+    #       - 27017:27017
+    #     volumes:
+    #       - data:/data/db
 
     steps:
       - name: Checkout repo code 
