added command to run container

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -45,6 +45,11 @@ jobs:
       - name: Run tests
         run: npm run test
 
+      - name: Run docker build
+        run: | 
+          docker-compose up 
+          docker-compose stop
+
       - name: Stop containers
         if: always()
         run: docker-compose -f "docker-compose.yml" down
