added docker-compose up --abort-on-container-exit to see if build fails

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -47,8 +47,7 @@ jobs:
 
       - name: Run docker build
         run: | 
-          docker-compose up -d
-          docker-compose stop
+          docker-compose up --abort-on-container-exit
 
       - name: Stop containers
         if: always()
