--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -46,8 +46,7 @@ jobs:
         run: npm run test
 
       - name: Run docker build
-        run: | 
-          npm run start
+        run: npm run start
 
       - name: Stop containers
         if: always()
