--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,11 +42,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm run test
-
-      - name: Run docker build
-        run: npm run start
+      # - name: Run tests
+      #   run: npm run test
 
       - name: Stop containers
         if: always()
