--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,25 +9,27 @@ jobs:
   runner-job:
     runs-on: ubuntu-latest
 
-    # services:
-    #   mongodb:
-    #     image: mongo:latest
-    #     ports:
-    #       - 27017:27017
-    #     volumes:
-    #       - data:/data/db
+    services:
+      mongodb:
+        image: mongo:latest
+        ports:
+          - 27017:27017
 
     steps:
       - name: Checkout repo code 
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
       
-      # - name: Build docker container
-      #   run: docker build -t node-docker --target test .
+      - name: Build docker container
+        run: docker build -t node-docker --target test .
 
       # - name: Run docker container with tests
       #   run: docker run --rm --name node-test node-docker
-      # # - name: Start docker-compose to run containers
-      # #   run: docker-compose build -t node-docker --target test . 
+      
+      # - name: Start docker-compose to run containers
+      #   run: docker-compose build -t node-docker --target test . 
 
       # # - name: Run tests
       # #   run: docker-compose run --rm --name node-test node-docker
@@ -36,11 +38,11 @@ jobs:
       #   if: always()
       #   run: docker-compose -f "docker-compose.yml" down
 
-      - name: Start containers
-        run: docker-compose -f "docker-compose.yml" up -d --build
+      # - name: Start containers
+      #   run: docker-compose -f "docker-compose.yml" up -d --build
 
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
 
       # - name: Run tests
       #   run: npm run test
