--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,8 +33,11 @@ jobs:
       - name: Install dependencies
         run: npm install
       
-      - name: Build docker container
-        run: docker build -t node-docker --target test .
+      # - name: Build docker container
+      #   run: docker build -t node-docker --target test .
+
+      - name: Run docker-compose tests
+        run: docker-compose -p tests run --rm nodejs_mongo_docker npm run test
 
       # - name: Run docker container with tests
       #   run: docker run --rm --name node-test node-docker
