added command to stop integration

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -45,6 +45,9 @@ jobs:
       # - name: Start docker-compose to run containers
       #   run: docker-compose build -t node-docker --target test . 
 
+      - name: Stop integration tests
+        run: docker-compose stop
+
       # - name: Run tests
       #   run: docker-compose run --rm --name node-test node-docker
 
