--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -53,7 +53,7 @@ jobs:
 
       #TODO - uncomment
       - name: Start containers
-        run: docker-compose up -d
+        run: docker-compose up 
 
       # - name: Start containers
       #   run: docker-compose -f "docker-compose.yml" up -d --build
