--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
 
       #TODO - uncomment
       - name: Start containers
-        run: docker-compose up 
+        run: docker-compose up -d
 
       # - name: Start containers
       #   run: docker-compose -f "docker-compose.yml" up -d --build
@@ -57,3 +57,9 @@ jobs:
       - name: Stop containers
         if: always()
         run: docker-compose -f "docker-compose.yml" down
+  docker-stop-job: 
+    runs-on: ubuntu-latest
+    needs: runner-job
+    steps: 
+      - name: Docker compose stop
+        run: docker-compose down 
