--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
 
       #TODO - uncomment
       - name: Start containers
-        run: docker-compose up -d
+        run: docker-compose up
 
       # - name: Start containers
       #   run: docker-compose -f "docker-compose.yml" up -d --build
@@ -61,5 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: runner-job
     steps: 
+      - name: Checkout repo code 
+        uses: actions/checkout@v2
+
       - name: Docker compose stop
         run: docker-compose down 
