--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
+
+networks:
+  my_net:
+    driver: bridge
+
 services:
   mongodb:
     image: mongo
     command: mongod --quiet --logpath /dev/null 
+    networks:
+      - my_net
 
   nodejs_mongo_docker:
     image: nodejs_mongo_docker
     build: .
     depends_on:
-      - "mongodb"
+      - mongodb
     ports:
       - 3000:3000
     volumes:
       - .:/code/my-app
+    networks:
+      - my_net
+
 
