--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest ./**/*.js",
+    "test:coverage": "jest --coverage",
     "test:watch": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-jest": "^27.4.6",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.8",
